# traa-flutter

./: .gitignore  .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/runner/: Runner.rc  main.cpp
ios/: traa_plugin.podspec
ios/Classes/: traa_plugin.c
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: traa_plugin.dart  traa_plugin_bindings_generated.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/: traa_plugin.podspec
macos/Classes/: traa_plugin.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: gen_binding.sh
test/: widget_test.dart
traa_plugin/: README.md  ffigen.yaml  pubspec.yaml
traa_plugin/android/: settings.gradle
traa_plugin/example/: pubspec.yaml
traa_plugin/example/lib/: main.dart
traa_plugin/example/linux/: my_application.cc
traa_plugin/example/windows/: CMakeLists.txt
traa_plugin/lib/: traa_plugin.dart  traa_plugin_bindings_generated.dart
traa_plugin/macos/: traa_plugin.podspec
traa_plugin/src/: CMakeLists.txt  traa_plugin.c
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
